--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Jason Victor Berdat.huhuju</span>
+                    Hi, I'm <span>Jason Victor Berdat.</span>
                     <br>
                     Junior Software Developer.
                 </h1>
