--- a/html/todo.html
+++ b/html/todo.html
@@ -18,7 +18,7 @@
     <h2>To-Do List</h2>
     <div class="wrapper">
         <div class="task-input">
-            <img src="bars-icon.svg">
+            <img src="../bars-icon.svg">
             <input type="text" placeholder="Add a new task">
         </div>
 
