--- a/html/simon.html
+++ b/html/simon.html
@@ -14,24 +14,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-index" id="game-page">
-        <header>
-            <a href="../html/gamehub.html" class="back-arrow">&#8592;</a>
-            <h1>Hub <i class="fa fa-gamepad" aria-hidden="true"></i> Simon Trickster</h1>
-        </header>
-        <div class="container">
-            <p id="result" class="hide">Demo Message</p>
-            <button id="start">Start Game</button>
-          </div>
-          <div class="wrapper hide">
-            <div class="simon">
-                <div class="color1 color-part"></div>
-                <div class="color2 color-part"></div>
-                <div class="color3 color-part"></div>
-                <div class="color4 color-part"></div>
-                <div id="count">00</div>
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+            <div class="dropdown">
+                <a class="navbar-brand dropdown-toggle fs-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu <i class="fas fa-gamepad" aria-hidden="true"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../html/gamehub.html">Back To Hub</a></li>
+                    <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
+                </ul>
             </div>
-          </div>
+        </div>
+    </nav>
+    <div class="container-fluid" id="game-page">
+        <h1 class="display-3 font-weight-bold text-light mb-4 text-center">Simon Trickster</h1>
+        <div class="row justify-content-center">
+            <div class="container">
+                <p id="result" class="hide">Demo Message</p>
+                <button id="start">Start Game</button>
+            </div>
+            <div class="col-12 col-md-8 col-lg-6 wrapper hide">
+                <div class="simon">
+                    <div class="color1 color-part"></div>
+                    <div class="color2 color-part"></div>
+                    <div class="color3 color-part"></div>
+                    <div class="color4 color-part"></div>
+                    <div id="count">00</div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/simon.js"></script>
