--- a/html/todo.html
+++ b/html/todo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="../css/todo.css">
     <title>To-Do List</title>
-    <link rel="icon" type="image/png" href="../images/jvblogo.png">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
     <link rel="icon" href="bars-icon.svg">
 <body>
