--- a/html/weather.html
+++ b/html/weather.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="../css/weather.css">
     <title>Weather App</title>
-    <link rel="icon" type="image/png" href="../images/jvblogo.png">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="search-box">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="Enter your location">
+            <input type="text" placeholder="Enter a Country">
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
 
