--- a/html/2048.html
+++ b/html/2048.html
@@ -14,25 +14,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-index" id="game-page">
-        <header>
-            <a href="../html/gamehub.html" class="back-arrow">&#8592;</a>
-            <h1>Hub <i class="fa fa-gamepad" aria-hidden="true"></i> 2048</h1>
-        </header>
-        <div class="container hide">
-            <div class="heading">
-                <h1>2048</h1>
-                <div class="score-container">
-                    Score:
-                    <span id="score">0</span>
-                </div>
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+            <div class="dropdown">
+                <a class="navbar-brand dropdown-toggle fs-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu <i class="fas fa-gamepad" aria-hidden="true"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../html/gamehub.html">Back To Hub</a></li>
+                    <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
+                </ul>
             </div>
-            <div class="grid"></div>
         </div>
-        <div class="cover-screen">
-            <h2 id="over-text" class="hide">Game Over</h2>
-            <p id="result"></p>
-            <button id="start-button">Start Game</button>
+    </nav>
+    <div class="container-fluid" id="game-page">
+        <div class="row justify-content-center">
+            <div class="container hide">
+                <div class="heading">
+                    <h1 class="display-3 font-weight-bold text-light mb-4 text-center">2048</h1>
+                    <div class="score-container">
+                        Score:
+                        <span id="score">0</span>
+                    </div>
+                </div>
+                <div class="grid"></div>
+            </div>
+            <div class="cover-screen">
+                <h2 id="over-text" class="hide">Game Over</h2>
+                <p id="result"></p>
+                <button id="start-button">Start Game</button>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
