--- a/html/connect4.html
+++ b/html/connect4.html
@@ -14,29 +14,43 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-index" id="game-page">
-        <header>
-            <a href="../html/gamehub.html" class="back-arrow">&#8592;</a>
-            <h1>Hub <i class="fa fa-gamepad" aria-hidden="true"></i> Connect 4 Game</h1>
-        </header>
-                <div class="wrapper">
-                    <div id="playerTurn">Demo Text</div>
-                    <div class="container"></div>
-                    <div id="information">
-                        <div class="player-wrappers">
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+            <div class="dropdown">
+                <a class="navbar-brand dropdown-toggle fs-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu <i class="fas fa-gamepad" aria-hidden="true"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../html/gamehub.html">Back To Hub</a></li>
+                    <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav> 
+    <div class="container-fluid" id="game-page">
+        <h1 class="display-3 font-weight-bold text-light mb-4 text-center">Connect 4</h1>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6 wrapper">
+                <div id="playerTurn" class="text-center"></div>
+                <div class="game-container">
+                    <div id="information" class="row">
+                        <div class="col player-wrappers">
                             Player 1
                             <div class="player1"></div>
                         </div>
-                        <div class="player-wrappers">
+                        <div class="col player-wrappers">
                             Player 2
                             <div class="player2"></div>
                         </div>
                     </div>
+                    <div class="grid-container"></div>
                 </div>
-                <div class="startScreen">
-                   <div id="message"></div>
-                   <button id="start">Start Game</button> 
-                </div>
+            </div>
+        </div>
+        <div class="startScreen hide">
+            <div id="message" class="text-white mb-3"></div>
+            <button id="start">New Game</button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/connect4.js"></script>
