--- a/html/gamehub.html
+++ b/html/gamehub.html
@@ -13,18 +13,126 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-index" id="home-page">
-        <header>
-            <a href="../index.html" class="back-arrow">&#8592;</a>
-            <h1>Portfolio <i class="fas fa-briefcase" aria-hidden="true"></i></h1>
-        </header>
-        <div class="main-menu">
-            <div class="menu-item" onclick="navigateToGame('../html/wordguessing.html')"><i class="fa-solid fa-keyboard" aria-hidden="true"></i><span class="item-name">Word Guessing Game</span></div>
-            <div class="menu-item" onclick="navigateToGame('../html/connect4.html')"><i class="fa-solid fa-arrow-up-right-dots" aria-hidden="true"></i><span class="item-name">Connect 4 Game</span></div>
-            <div class="menu-item" onclick="navigateToGame('../html/memory.html')"><i class="fa-solid fa-brain" aria-hidden="true"></i><span class="item-name">Memory Game</span></div>
-            <div class="menu-item" onclick="navigateToGame('../html/simon.html')"><i class="fa-solid fa-wand-magic-sparkles" aria-hidden="true"></i><span class="item-name">Simon Trickster Game</span></div>
-            <div class="menu-item" onclick="navigateToGame('../html/2048.html')"><i class="fa-solid fa-2" aria-hidden="true"></i></i><span class="item-name">2048 Game</span></div>
-            <div class="menu-item" onclick="navigateToGame('../html/tictactoe.html')"><i class="fa-regular fa-circle-xmark" aria-hidden="true"></i><span class="item-name">Tic Tac Toe</span></div>
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand fs-2" href="../index.html">Portfolio <i class="fas fa-briefcase" aria-hidden="true"></i></a>
+          <button type="button" class="btn btn-dark fs-5" data-bs-toggle="modal" data-bs-target="#myModal">
+            <span><i class="bi bi-info-circle-fill"></i></span>
+          </button>
+          <!--Modal-->
+          <div class="modal fade" id="myModal">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                  <h4 class="modal-title">Game Hub Info</h4>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <div class="container mt-3">
+                        The Game Hub Application is a sleek and modern web-based platform designed to provide users with easy access to a variety of engaging games. 
+                        This application features a visually appealing and user-friendly interface, 
+                        leveraging Bootstrap for responsive design and Font Awesome icons for intuitive navigation.
+                    </div>
+                    <br><br>
+                    <h5>Features:</h5>
+                    <div class="container mt-3">
+                        <div class="list-group list-group-numbered">
+                            <a href="../html/wordguessing.html" class="list-group-item list-group-item-action">
+                                <h5>Word Guessing Game</h5>
+                                <p class="mb-1">A fun and challenging game where players guess the correct word based on given hints.</p>
+                            </a>
+                            <a href="../html/connect4.html" class="list-group-item list-group-item-action">
+                                <h5>Connect 4 Game</h5>
+                                <p class="mb-1">The classic strategy game where players take turns dropping discs into a grid, aiming to connect four of their pieces in a row.</p>
+                            </a>
+                            <a href="../html/memory.html" class="list-group-item list-group-item-action">
+                                <h5>Memory Game</h5>
+                                <p class="mb-1">A cognitive game designed to test and improve memory skills by matching pairs of cards.</p>
+                            </a>
+                            <a href="../html/simon.html" class="list-group-item list-group-item-action">
+                                <h5>Simon Trickster Game</h5>
+                                <p class="mb-1">A game that tests memory and pattern recognition by challenging players to repeat increasingly complex sequences of lights and sounds.</p>
+                            </a>
+                            <a href="../html/2048.html" class="list-group-item list-group-item-action">
+                                <h5>2048 Game</h5>
+                                <p class="mb-1">A popular puzzle game where players combine numbered tiles to reach the elusive 2048 tile.</p>
+                            </a>
+                            <a href="../html/tictactoe.html" class="list-group-item list-group-item-action">
+                                <h5>Tic Tac Toe</h5>
+                                <p class="mb-1">The timeless two-player game where players aim to get three of their marks in a row on a 3x3 grid.</p>
+                            </a>
+                        </div>
+                    </div>
+                    <br><br>
+                    <h5>Technologies Used:</h5>
+                    <div class="container mt-3">
+                        <ul class="list-group list-group">
+                            <li class="list-group-item">
+                                <h5>Bootstrap</h5>
+                                <p class="mb-1">For responsive layout and styling</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>Font Awesome</h5>
+                                <p class="mb-1">For visually appealing icons that enhance user experience.</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>HTML/CSS</h5>
+                                <p class="mb-1">For the structure and design of the application.</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>JavaScript</h5>
+                                <p class="mb-1">For interactivity and game logic.</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <br><br>
+                    <h5>Navigation:</h5>
+                    <div class="container mt-3">
+                        Users can easily navigate through the game hub by clicking on the respective icons, each representing a different game.
+                        The application is designed to be intuitive and responsive, ensuring a seamless experience across various devices.
+                    </div>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                </div>
+          
+              </div>
+            </div>
+          </div>
+        </div>
+    </nav>
+    <div class="container-fluid mt-5 pt-5">
+        <h1 class="display-3 font-weight-bold text-light mb-4">Game Hub</h1>
+        <div class="container-index" id="home-page">
+            <div class="row">
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/wordguessing.html')">
+                    <i class="fa-solid fa-keyboard" aria-hidden="true"></i>
+                    <span class="item-name">Word Guessing Game</span>
+                </div>
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/connect4.html')">
+                    <i class="fa-solid fa-arrow-up-right-dots" aria-hidden="true"></i>
+                    <span class="item-name">Connect 4 Game</span>
+                </div>
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/memory.html')">
+                    <i class="fa-solid fa-brain" aria-hidden="true"></i>
+                    <span class="item-name">Memory Game</span>
+                </div>
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/simon.html')">
+                    <i class="fa-solid fa-wand-magic-sparkles" aria-hidden="true"></i>
+                    <span class="item-name">Simon Trickster Game</span>
+                </div>
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/2048.html')">
+                    <i class="fa-solid fa-2" aria-hidden="true"></i></i>
+                    <span class="item-name">2048 Game</span>
+                </div>
+                <div class="col p-4 bg-dark m-2" id="menu-item" onclick="navigateToGame('../html/tictactoe.html')">
+                    <i class="fa-regular fa-circle-xmark" aria-hidden="true"></i>
+                    <span class="item-name">Tic Tac Toe</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
