--- a/html/lunchvideo.html
+++ b/html/lunchvideo.html
@@ -4,17 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lunch Order App(Video)</title>
-    <link rel="icon" type="image/png" href="../images/jvblogo.png">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" type="image/png" href="../images/jvblogo.png"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-video-player/2.0.2/cld-video-player.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/lunchvideo.css">
 </head>
 <body>
-    <header>
-        <a href="../index.html" class="back-arrow">&#8592;</a>
-        <h1>Portfolio <i class="fas fa-briefcase" aria-hidden="true"></i></h1>
-    </header>
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark">
+        <div class="container-fluid">
+            <div class="dropdown">
+                <a class="navbar-brand dropdown-toggle fs-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu <i class="fas fa-video" aria-hidden="true"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../html/bankvideo.html">Bank Interest App Video</a></li>
+                    <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
+                </ul>
+            </div>
+          <button type="button" class="btn btn-dark fs-5" data-bs-toggle="modal" data-bs-target="#myModal">
+            <span><i class="bi bi-info-circle-fill"></i></span>
+          </button>
+          <!--Modal-->
+          <div class="modal fade" id="myModal">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                  <h4 class="modal-title">Lunch Order App Info</h4>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <div class="container mt-3">
+                        During my time at IT Certification Academy, I developed an application called the Lunch Order App.
+                        They requested this project in order to reduce the hassle of clients having to write down their lunch order on paper every time. 
+                        In reality, this project does not place orders with the delivery services. 
+                        Users may register, browse the menu, select what they want, and it will be logged for administrators to view. 
+                        They can then assign someone to go to the shop and have the customers' requests fulfilled. 
+                    </div>
+                    <br>
+                    <h5>Technologies Used:</h5>
+                    <div class="container mt-3">
+                        <ul class="list-group list-group">
+                            <li class="list-group-item">
+                                <h5>ASP.NET Core MVC</h5>
+                                <p class="mb-1">For its flexibility, performance, and robustness.</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>Bootstrap</h5>
+                                <p class="mb-1">For responsive layout, styling amd icons</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>HTML/CSS</h5>
+                                <p class="mb-1">For the structure and design of the application.</p>
+                            </li>
+                            <li class="list-group-item">
+                                <h5>JavaScript</h5>
+                                <p class="mb-1">For interactivity and API's</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </nav>
     <main class="main">
-        <div class="container">
+        <div class="container-video">
             <iframe
                 src="https://player.cloudinary.com/embed/?public_id=lunch&cloud_name=drhlhs7ac&player[fontFace]=Orbitron&player[colors][accent]=%23401294&player[showJumpControls]=true&player[pictureInPictureToggle]=true"
                 width="640"
@@ -26,12 +89,7 @@
             </iframe>
         </div>
     </main>
-    <div class="icons">
-        <a href="../html/bankvideo.html" class="icon">
-            <i class="fa-solid fa-circle-right"></i>
-        </a>
-    </div>
-    <!-- <script src="../js/gamehub.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/696b4927a0.js" crossorigin="anonymous"></script>
 </body>
 </html>
