--- a/html/sudoku_solver.html
+++ b/html/sudoku_solver.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/sudoku_solver.css">
     <title>Sudoku Solver</title>
-    <link rel="icon" type="image/png" href="../images/jvblogo.png">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
