--- a/html/tictactoe.html
+++ b/html/tictactoe.html
@@ -6,7 +6,6 @@
     <title>Game Hub</title>
     <link rel="icon" type="image/png" href="../images/GameController.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../css/index.css"> -->
     <link rel="stylesheet" href="../css/tictactoe.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +13,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-index" id="game-page">
-        <header>
-            <a href="../html/gamehub.html" class="back-arrow">&#8592;</a>
-            <h1>Hub <i class="fa fa-gamepad" aria-hidden="true"></i> Tic Tac Toe</h1>
-        </header>
-        <div class="wrapper">
-            <div class="container">
+    <nav class="navbar navbar-expand-lg p-3 bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+            <div class="dropdown">
+                <a class="navbar-brand dropdown-toggle fs-2" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu <i class="fas fa-gamepad" aria-hidden="true"></i>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../html/gamehub.html">Back To Hub</a></li>
+                    <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
+                </ul>
+            </div>
+        </div>
+      </nav>
+    <div class="container-fluid mt-5 pt-5" id="game-page">
+        <h1 class="display-3 font-weight-bold text-light mb-4 text-center">Tic Tac Toe</h1>
+        <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6 wrapper">
+            <div class="container mt-5">
                 <button class="button-option"></button>
                 <button class="button-option"></button>
                 <button class="button-option"></button>
@@ -38,6 +48,7 @@
             <p id="message">Sample Message</p>
             <button id="new-game">New Game</button>
         </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/tictactoe.js"></script>
