--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="icon" href="../Portfolio/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="../Portfolio/images/PortfolioPic.jpg" alt="">
+                    <img src="../images/PortfolioPic.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -226,14 +226,14 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/lunchapp.png" alt="">
+                        <img src="../images/lunchapp.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="../Portfolio/html/lunchvideo.html">
+                        <a href="../html/lunchvideo.html">
                             <h3>Lunch Order App<br>(ASP.NET Core)</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/lunchvideo.html" class="icon">
+                            <a href="../html/lunchvideo.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
@@ -241,14 +241,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/gamehub.png" alt="">
+                        <img src="../images/gamehub.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="../Portfolio/html/gamehub.html">
+                        <a href="../html/gamehub.html">
                             <h3>Game Hub</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/gamehub.html" class="icon">
+                            <a href="../html/gamehub.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
@@ -256,14 +256,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/dailyapp.jpg" alt="">
+                        <img src="../images/dailyapp.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="../Portfolio/html/bankvideo.html">
+                        <a href="../html/bankvideo.html">
                             <h3>Daily Interest<br>Calculator<br>(App)</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/bankvideo.html" class="icon">
+                            <a href="../html/bankvideo.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
@@ -271,14 +271,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/sudoku.png" alt="">
+                        <img src="../images/sudoku.png" alt="">
                     </div>
                     <div  class="hover-items">
-                        <a href="../Portfolio/html/sudoku_solver.html">
+                        <a href="../html/sudoku_solver.html">
                             <h3>Sudoku Solver</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/sudoku_solver.html" class="icon">
+                            <a href="../html/sudoku_solver.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
@@ -286,14 +286,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/weather.png" alt="">
+                        <img src="../images/weather.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="../Portfolio/html/weather.html">
+                        <a href="../html/weather.html">
                             <h3>Weather Application</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/weather.html" class="icon">
+                            <a href="../html/weather.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
@@ -301,14 +301,14 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="../Portfolio/images/To-do_List.png" alt="">
+                        <img src="../images/To-do_List.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <a href="../Portfolio/html/todo.html">
+                        <a href="../html/todo.html">
                             <h3>To Do List</h3>
                         </a>
                         <div class="icons">
-                            <a href="../Portfolio/html/todo.html" class="icon">
+                            <a href="../html/todo.html" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
