--- a/html/bankvideo.html
+++ b/html/bankvideo.html
@@ -18,7 +18,7 @@
                     Menu <i class="fas fa-video" aria-hidden="true"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="../html/lunchvideo.html">Interest App Video</a></li>
+                    <li><a class="dropdown-item" href="../html/lunchvideo.html">Lunch Order App Video</a></li>
                     <li><a class="dropdown-item" href="../index.html">Back To Portfolio</a></li>
                 </ul>
             </div>
@@ -31,7 +31,7 @@
               <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                  <h4 class="modal-title">Lunch Order App Info</h4>
+                  <h4 class="modal-title">Interest App Info</h4>
                   <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Modal body -->
