--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am an IT Certification Academy Graduate who has acquired the knowledge and skills that it takes to become a software developer, 
-                        who has a string interest in coding, is committed to building and designing websites and applications,
-                        and broaden my knowledge and expertise in programming.
+                        I am a software development intern using my knowledge and skills that I have acquired
+                        as an IT Certification Academy Graduate. I am committed to building and designing websites and 
+                        applications, ultimately broadening my knowledge and expertise in programming.
                     </p>
                     <!-- <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -65,7 +65,7 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">3+</p>
-                            <p class="small-text">Years of <br /> experience</p>
+                            <p class="small-text">Years of coding<br /> experience</p>
                         </div>
                     </div>
                     <!-- <div class="about-item">
@@ -86,7 +86,7 @@
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
-                        <p class="prog-title">html5</p>
+                        <p class="prog-title">HTML5</p>
                         <div class="progress-con">
                             <p class="prog-text">90%</p>
                             <div class="progress">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">css</p>
+                        <p class="prog-title">CSS</p>
                         <div class="progress-con">
                             <p class="prog-text">80%</p>
                             <div class="progress">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">Javascript</p>
                         <div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
@@ -113,11 +113,47 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">bootstrap</p>
+                        <p class="prog-title">Bootstrap</p>
                         <div class="progress-con">
                             <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="bootstrap"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">C#</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="csharp"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">.Net Core MVC</p>
+                        <div class="progress-con">
+                            <p class="prog-text">50%</p>
+                            <div class="progress">
+                                <span class="core"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">SQL</p>
+                        <div class="progress-con">
+                            <p class="prog-text">75%</p>
+                            <div class="progress">
+                                <span class="sql"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Azure</p>
+                        <div class="progress-con">
+                            <p class="prog-text">60%</p>
+                            <div class="progress">
+                                <span class="azure"></span>
                             </div>
                         </div>
                     </div>
@@ -154,14 +190,16 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
-                        <i class="fas fa-user-graduate"></i>
+                        <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2017 - 2021</p>
-                    <h5>High School Student<span> - Eastwood High</span></h5>
+                    <p class="tl-duration">2024 - present</p>
+                    <h5>Software Development Intern<span> - IT Certification Academy</span></h5>
                     <p>
-                        Completed high school in 2021 after enrolling in 2017.
+                        Working as a mentor to students - assisting them with their assignments/any issues they have. Monitoring student progress through custom quizzes.
+                        Assisting the programming lecturer in completing lectures and debugging student programs.
+                        Creating in-house software for the campus in order to automate admin processes.
                     </p>
-                </div>
+                </div>  
                 <br>
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -170,18 +208,18 @@
                     <p class="tl-duration">2022 - 2023</p>
                     <h5>ITCA Software Development Student<span> - IT Certification Academy</span></h5>
                     <p>
-                        Completed my 2 year Software Development course in 2023 after enrolling to ITCA in 2022.
+                        Completed my 2 year Software Development course at the end of 2023 after enrolling to ITCA in 2022.
                     </p>
                 </div>
                 <br>
                 <div class="timeline-item">
                     <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-user-graduate"></i>
                     </div>
-                    <p class="tl-duration">2024 - present</p>
-                    <h5>Specialist(Assistant Lecturer)<span> - IT Certification Academy</span></h5>
+                    <p class="tl-duration">2017 - 2021</p>
+                    <h5>High School Student<span> - Eastwood High</span></h5>
                     <p>
-                        Gaining experience at ITCA through their Specialists course.
+                        Matriculated at the end of 2021.
                     </p>
                 </div>
                 <!-- <div class="timeline-item">
