--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <i class="fas fa-user-graduate"></i>
                     </div>
                     <p class="tl-duration">2017 - 2021</p>
-                    <h5>High School Student<span> - Eastwood High</span></h5>
+                    <h5>High School Student<span> - Eastwood Secondary School</span></h5>
                     <p>
                         Matriculated at the end of 2021.
                     </p>
