--- a/index.html
+++ b/index.html
@@ -104,20 +104,29 @@
                         </div>
                     </div>
                     <div class="progress-bar">
+                        <p class="prog-title">Bootstrap</p>
+                        <div class="progress-con">
+                            <p class="prog-text">75%</p>
+                            <div class="progress">
+                                <span class="bootstrap"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
                         <p class="prog-title">Javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">65%</p>
+                            <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Bootstrap</p>
+                        <p class="prog-title">ReactJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">60%</p>
                             <div class="progress">
-                                <span class="bootstrap"></span>
+                                <span class="react"></span>
                             </div>
                         </div>
                     </div>
@@ -131,7 +140,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">.Net Core MVC</p>
+                        <p class="prog-title">ASP.Net Core MVC</p>
                         <div class="progress-con">
                             <p class="prog-text">50%</p>
                             <div class="progress">
@@ -157,15 +166,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="progress-bar">
-                        <p class="prog-title">ReactJS</p>
-                        <div class="progress-con">
-                            <p class="prog-text">75%</p>
-                            <div class="progress">
-                                <span class="react"></span>
-                            </div>
-                        </div>
-                    </div> -->
                     <!-- <div class="progress-bar">
                         <p class="prog-title">NodeJS</p>
                         <div class="progress-con">
@@ -287,6 +287,21 @@
                         </a>
                         <div class="icons">
                             <a href="../html/gamehub.html" class="icon">
+                                <i class="fa fa-hand-point-up"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="../images/GymBros.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <a href="https://jvbgymbros.netlify.app/" target="_blank">
+                            <h3>Gym Bros</h3>
+                        </a>
+                        <div class="icons">
+                            <a href="https://jvbgymbros.netlify.app/" target="_blank" class="icon">
                                 <i class="fa fa-hand-point-up"></i>
                             </a>
                         </div>
