--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">ReactJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">60%</p>
+                            <p class="prog-text">65%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
@@ -142,7 +142,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">ASP.Net Core MVC</p>
                         <div class="progress-con">
-                            <p class="prog-text">50%</p>
+                            <p class="prog-text">60%</p>
                             <div class="progress">
                                 <span class="core"></span>
                             </div>
@@ -309,6 +309,21 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="../images/jvbweather.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <a href="https://jvbweather.netlify.app/" target="_blank">
+                            <h3>Weather Application</h3>
+                        </a>
+                        <div class="icons">
+                            <a href="https://jvbweather.netlify.app/" target="_blank" class="icon">
+                                <i class="fa fa-hand-point-up"></i>
+                            </a>
+                        </div>
+                    </div>                
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="../images/dailyapp.jpg" alt="">
                     </div>
                     <div class="hover-items">
@@ -336,21 +351,6 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="../images/weather.png" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <a href="../html/weather.html">
-                            <h3>Weather Application</h3>
-                        </a>
-                        <div class="icons">
-                            <a href="../html/weather.html" class="icon">
-                                <i class="fa fa-hand-point-up"></i>
-                            </a>
-                        </div>
-                    </div>                
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
