--- a/index.html
+++ b/index.html
@@ -261,8 +261,14 @@
             <p class="port-text">
                 Here are some of my work that I've done in various programming languages.
             </p>
+            <div id="buttons">
+                <button class="button-value active" onclick="filterCategory('all', this)">All</button>
+                <button class="button-value" onclick="filterCategory('html5-css-js', this)">HTML5</button>
+                <button class="button-value" onclick="filterCategory('asp.net-core', this)">.Net Core</button>
+                <button class="button-value" onclick="filterCategory('react', this)">ReactJS</button>
+            </div>
             <div class="portfolios">
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="asp.net-core">
                     <div class="image">
                         <img src="../images/lunchapp.png" alt="">
                     </div>
@@ -277,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="html5-css-js">
                     <div class="image">
                         <img src="../images/gamehub.png" alt="">
                     </div>
@@ -292,7 +298,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="react">
                     <div class="image">
                         <img src="../images/GymBros.png" alt="">
                     </div>
@@ -307,7 +313,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="react">
                     <div class="image">
                         <img src="../images/jvbweather.png" alt="">
                     </div>
@@ -322,7 +328,7 @@
                         </div>
                     </div>                
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="html5-css-js">
                     <div class="image">
                         <img src="../images/dailyapp.jpg" alt="">
                     </div>
@@ -337,7 +343,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="html5-css-js">
                     <div class="image">
                         <img src="../images/sudoku.png" alt="">
                     </div>
@@ -352,7 +358,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" id="html5-css-js">
                     <div class="image">
                         <img src="../images/To-do_List.png" alt="">
                     </div>
