--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </p>
             <div id="buttons">
                 <button class="button-value active" onclick="filterCategory('all', this)">All</button>
-                <button class="button-value" onclick="filterCategory('html5-css-js', this)">HTML5</button>
+                <button class="button-value" onclick="filterCategory('html5-css-js', this)">HTML5, CSS, JS</button>
                 <button class="button-value" onclick="filterCategory('asp.net-core', this)">.Net Core</button>
                 <button class="button-value" onclick="filterCategory('react', this)">ReactJS</button>
             </div>
